# pwgen

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pwgen/: __init__.py  __main__.py  alphabets.py  generator.py
