[build-system]
requires = ["flit_core >= 3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "pwgen"
dynamic = ["version"]
description = "Password generator utillity"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.9"
authors = [
{name = "Erik Petersen", email = "eht@it-trans.dk"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Security",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.9",
]

[project.scripts]
pwgen = "pwgen.__main__:main"


